welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:6: error: Int does not take parameters
  for (i <- 0 to nums.length()-1){
                            ^