welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.code
def indexOfMaxValue(nums:Array[Int]):Int = {
  
  var max = nums(0)
  var indice = 0
  
  for (i <- 0 to nums.length()-1){
    if (nums(i)>max){
      max = nums(i)
      indice = i
    }
  }
  return indice
}